c2prj1_cards/grade.txt
Grading at Wed Jun 10 08:16:29 UTC 2020
Compiling cards.c
cards.c: In function ‘card_from_num’:
cards.c:128:26: error: ‘VAKUE_ACE’ undeclared (first use in this function)
   case 14 : temp.value = VAKUE_ACE; break ;
                          ^
cards.c:128:26: note: each undeclared identifier is reported only once for each function it appears in
Could not compile your card.c!

Overall Grade: FAILED
